--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Restaurant | Canvas</title>
+	<title>Home | Ryan Wabe</title>
 
 </head>
 
-<body class="stretched sticky-footer page-transition" data-loader-html="<span class='pizza'> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> </span>">
+<!-- <body class="stretched sticky-footer page-transition" data-loader-html="<span class='pizza'> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> <span class='slice'></span> </span>"> -->
+	<body class="stretched sticky-footer page-transition">
 
 	<!-- Document Wrapper
 	============================================= -->
@@ -49,7 +50,7 @@
 
 						<!-- Logo
 						============================================= -->
-						<div id="logo" class="col-auto mr-lg-0 order-lg-2">
+						<div id="logo" class="col-auto mr-lg-0 order-lg-1">
 							<a href="demo-restaurant.html" class="standard-logo"><img src="demos/restaurant/images/logo.png" alt="Canvas Logo"></a>
 							<a href="demo-restaurant.html" class="retina-logo"><img src="demos/restaurant/images/logo@2x.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
@@ -60,19 +61,19 @@
 
 						<!-- Primary Navigation
 						============================================= -->
-						<nav class="primary-menu col-lg-4 order-lg-1">
+						<nav class="primary-menu col-lg-8 order-lg-2">
 
 							<ul class="menu-container">
 								<li class="menu-item"><a class="menu-link" href="demo-restaurant.html"><div>Home</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="demo-restaurant-about-us.html"><div>About</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="demo-restaurant-menu.html"><div>Menu</div></a></li>
-							</ul>
+							<!-- </ul>
 
 						</nav>
 
 						<nav class="primary-menu col-lg-4 order-lg-3">
 
-							<ul class="menu-container justify-content-lg-end">
+							<ul class="menu-container justify-content-lg-end"> -->
 								<li class="menu-item"><a class="menu-link" href="demo-restaurant-gallery.html"><div>Gallery</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="demo-restaurant-blog.html"><div>Blog</div></a></li>
 								<li class="menu-item"><a class="menu-link color" href="demo-restaurant-reservation.html"><div>Reservation</div></a></li>
